--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TwentyOneDays</string>
+    <string name="client_id">434634305527-ooddb01ht99b7uoap6jl3n6q4t4c4fgh.apps.googleusercontent.com</string>
         <string-array name="Types_array">
             <item>Text</item>
             <item>Video</item>
