--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">TwentyOneDays</string>
     <string name="client_id">434634305527-ooddb01ht99b7uoap6jl3n6q4t4c4fgh.apps.googleusercontent.com</string>
-        <string-array name="Types_array">
-            <item>Text</item>
-            <item>Video</item>
-            <item>Audio</item>
-            <item>Photo</item>
-            <item>File</item>
-        </string-array>
+    <string-array name="Types_array">
+        <item>Text</item>
+        <item>Video</item>
+        <item>Audio</item>
+        <item>Photo</item>
+        <item>File</item>
+    </string-array>
 
     <string-array name="Freq_array">
         <item>Daily</item>
@@ -16,4 +16,15 @@
         <item>every 4 days</item>
         <item>Every week</item>
     </string-array>
+    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
